@@ -1,10 +1,6 @@
 package ti4.map;
 
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonIgnore;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonTypeName;
-import java.awt.Point;
+import java.awt.*;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
@@ -12,12 +8,18 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonTypeName;
 import org.apache.commons.lang3.StringUtils;
 import ti4.generator.Mapper;
 import ti4.helpers.Constants;
 import ti4.helpers.Helper;
 import ti4.model.AttachmentModel;
 import ti4.model.PlanetModel;
+import ti4.model.PlanetTypeModel;
+import ti4.model.TechSpecialtyModel;
 import ti4.model.UnitModel;
 
 @JsonTypeName("planet")
@@ -42,19 +44,19 @@ public class Planet extends UnitHolder {
         PlanetModel planetInfo = Mapper.getPlanet(name);
         if (Optional.ofNullable(planetInfo).isPresent()) {
             if (planetInfo.getPlanetTypes() != null) {
-                planetType.addAll(planetInfo.getPlanetTypes().stream().map(x -> x.toString()).toList());
+                planetType.addAll(planetInfo.getPlanetTypes().stream().map(PlanetTypeModel.PlanetType::toString).toList());
             }
-            if (planetInfo.getPlanetType() == null && planetInfo.getPlanetTypes() != null && planetInfo.getPlanetTypes().size() > 0) {
-                originalPlanetType = planetInfo.getPlanetTypes().get(0).toString();
+            if (planetInfo.getPlanetType() == null && planetInfo.getPlanetTypes() != null && !planetInfo.getPlanetTypes().isEmpty()) {
+                originalPlanetType = planetInfo.getPlanetTypes().getFirst().toString();
             } else if (planetInfo.getPlanetType() != null) {
                 originalPlanetType = planetInfo.getPlanetType().toString();
             }
             if (planetInfo.getContrastColor() != null) {
                 contrastColor = planetInfo.getContrastColor();
             }
-            if (Optional.ofNullable(planetInfo.getTechSpecialties()).orElse(new ArrayList<>()).size() > 0) {
-                originalTechSpeciality = planetInfo.getTechSpecialties().get(0).toString();
-                techSpeciality.addAll(planetInfo.getTechSpecialties().stream().map(x -> x.toString()).toList());
+            if (!Optional.ofNullable(planetInfo.getTechSpecialties()).orElse(new ArrayList<>()).isEmpty()) {
+                originalTechSpeciality = planetInfo.getTechSpecialties().getFirst().toString();
+                techSpeciality.addAll(planetInfo.getTechSpecialties().stream().map(TechSpecialtyModel.TechSpecialty::toString).toList());
             }
             if (!StringUtils.isBlank(planetInfo.getLegendaryAbilityName()))
                 hasAbility = true;
@@ -252,7 +254,7 @@ public class Planet extends UnitHolder {
 
     @JsonIgnore
     public Set<String> getPlanetTypes() {
-        Set<String> types = new HashSet<String>();
+        Set<String> types = new HashSet<>();
         List<String> three = List.of("hazardous", "cultural", "industrial");
         for (String type : planetType) {
             if (three.contains(type)) types.add(type);
